# SRK

./: .gitignore  CMakeLists.txt  FindROOT.cmake  README.md  SRK.cpp
examples/: HgTest.mac  allCommands.mac  g2baseline.mac  g2oscillationtests.mac  g2test1.mac  g2test2.mac  g2test3.mac  g2test4.mac  g2test5.mac  g2test6.mac  test1.mac
include/: SRKDipoleField.h  SRKEqOfMHarmOscillation.h  SRKEqOfMNonRelLinSpherical.h  SRKEquationOfMotion.h  SRKField.h  SRKGlobalField.h  SRKGradientField.h  SRKGraphics.h  SRKInterpolatedField.h  SRKMacroManager.h  SRKManager.h  SRKMotionState.h  SRKMotionTracker.h  SRKODEState.h  SRKQuadrupoleField.h  SRKROOTField.h  SRKRunStats.h  SRKSextupoleField.h  SRKSpinTracker.h  SRKTrack.h  SRKUniformField.h
src/: SRKDipoleField.cpp  SRKEqOfMHarmOscillation.cpp  SRKEqOfMNonRelLinSpherical.cpp  SRKEquationOfMotion.cpp  SRKField.cpp  SRKGlobalField.cpp  SRKGradientField.cpp  SRKGraphics.cpp  SRKInterpolatedField.cpp  SRKMacroManager.cpp  SRKManager.cpp  SRKMotionState.cpp  SRKMotionTracker.cpp  SRKODEState.cpp  SRKQuadrupoleField.cpp  SRKROOTField.cpp  SRKSextupoleField.cpp  SRKSpinTracker.cpp  SRKTrack.cpp  SRKUniformField.cpp  testproj.cpp
